Updated fonts and front header

--- a/public/stylesheets/colors.less
+++ b/public/stylesheets/colors.less
@@ -15,27 +15,28 @@
 @grey-b-text : #CCCBC7;
 
 // Color Palette
-@blue            : #4593E3;
-@secondary-blue  : #0E83CD;
-@third-blue      : #5CBCF6;
-@third-dark-blue : #49A7DF;
-@dark-blue       : #226FBE;
-@darker-blue     : #174D85;
-@red             : #F06060;
-@dark-red        : #CB4E4E;
-@darker-red      : #AB3C3C;
-@green           : #2AC56C;
-@secondary-green : #2ECC71;
-@dark-green      : #17AA56;
-@darker-green    : #119E4D;
-@purple          : #9E54BD;
-@dark-purple     : #823AA0;
-@yellow          : #FCD04B;
-@dark-yellow     : #FCAD26;
-@darker-yellow   : #F29E0D;
-@orange          : #F49B78;
-@light-orange    : #F3BF81;
-@dark-orange     : #F1706D;
+@blue                : #4593E3;
+@secondary-blue      : #0E83CD;
+@secondary-dark-blue : #095b8f;
+@third-blue          : #5CBCF6;
+@third-dark-blue     : #49A7DF;
+@dark-blue           : #226FBE;
+@darker-blue         : #174D85;
+@red                 : #F06060;
+@dark-red            : #CB4E4E;
+@darker-red          : #AB3C3C;
+@green               : #2AC56C;
+@secondary-green     : #2ECC71;
+@dark-green          : #17AA56;
+@darker-green        : #119E4D;
+@purple              : #9E54BD;
+@dark-purple         : #823AA0;
+@yellow              : #FCD04B;
+@dark-yellow         : #FCAD26;
+@darker-yellow       : #F29E0D;
+@orange              : #F49B78;
+@light-orange        : #F3BF81;
+@dark-orange         : #F1706D;
 
 //-@global-background : url('/assets/img/global-bg.png');
 
