--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,22 +6,25 @@
 		</div>
 		<div class="background-overlay"></div>
 		<div class="container">
-			<div class="row">
+			<div class="row small-margin-bottom">
 				<div class="col-lg-6">
 					<header class="section-header home landing-text underline underline-left underline-landing">
 						<h1 class="headline text-large hairline landing-text">Brent Scheibelhut</h1>
 						<p class="get-smaller">Developer. Designer. Athlete. Writer.<br> Freelancing At Its Finest.</p>
 					</header>
+					<div class="row">
+						<div class="col-lg-12 small-margin-bottom">
+							<a title="Create my roadmap for free" href="#">
+								<button class="cta2 hire blue1"></button>
+							</a>
+							<a title="Create my roadmap for free" href="#">
+								<button class="cta2 contact blue2 xsmall-margin-left"></button>
+							</a>
+						</div>
+					</div>
 				</div>
-				<div class="col-lg-6 text-center"> <!-- animated fadeInRight -->
+				<div class="col-lg-6 text-center animated fadeInRight"> <!-- animated fadeInRight -->
 					<img class="landing-image" src="/images/macbook-header.png" alt="Custom roadmap software">
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-lg-12 small-margin-top small-margin-bottom">
-					<a title="Create my roadmap for free" href="https://app.roadmunk.com/login/#/signup">
-						<div id="landing-button" class="cta general center"></div>
-					</a>
 				</div>
 			</div>
 		</div>
