--- a/public/stylesheets/reset.less
+++ b/public/stylesheets/reset.less
@@ -124,6 +124,26 @@
     margin-top: 15px;
 }
 
+//Margin Left 
+
+.small-margin-left {
+    margin-left : 30px;
+}
+
+.xsmall-margin-left {
+    margin-left : 15px;
+}
+
+.small-margin-right {
+    margin-right : 30px;
+}
+
+.xsmall-margin-right {
+    margin-right : 15px;
+}
+
+
+
 @media (max-width: 1000px) {
     .text-xlarge {
         font-size   : 56px;
