End of Day Changes

--- a/public/stylesheets/global.less
+++ b/public/stylesheets/global.less
@@ -580,6 +580,10 @@ a {
     .section-fill(@blue, @light-font);
   }
 
+  &.purple {
+    .section-fill(@purple, @light-font);
+  }
+
   &.grey {
     .section-fill(@secondary-bg, @steel-darkest);
   }
@@ -590,6 +594,10 @@ a {
 
   &.section-xs {
     padding: 45px;
+  }
+
+  &.section-companies {
+    padding : 30px 0 40px 0; 
   }
 
   &.section-short {
