--- a/public/stylesheets/home.less
+++ b/public/stylesheets/home.less
@@ -54,6 +54,12 @@
     }*/
   }
 
+  .companies {
+    .flex-display();
+    .flex-wrap(wrap);
+    .justify-content(space-around);
+  }
+
   .landing-text {
     text-align: left !important;
   }
