--- a/views/home.ejs
+++ b/views/home.ejs
@@ -30,6 +30,49 @@
 		</div>
 	</section>
 	<article>
+		<section class="section section-companies purple has-top">
+			<div class="background-media"></div>
+			<div class="background-overlay"></div>
+			<div class="container">
+				<header class="section-header small text-center underline">
+					<h1 class="headline text-large hairline xsmall-margin-bottom">Companies</h1>
+				</header>
+				<div class="row">
+					<div class="col-md-12 text-center">
+						<ul class="list-unstyled center-images companies">
+							<li class="text-center small-margin-top">
+								<a title="Roadmunk" href="https://www.roadmunk.com">
+									<img src="/images/logos/roadmunk-logo.png" width="300px" alt="Roadmunk">
+								</a>
+							</li>
+							<li class="text-center small-margin-top">
+								<a title="Salesforce Work.com" href="http://www.work.com">
+									<img src="/images/logos/w-logo.png" width="300px" alt="Salesforce Work.com">
+								</a>
+							</li>
+							
+							<li class="text-center small-margin-top">
+								<a title="Blueprint Coaching" href="http://www.oce-ontario.org/">
+									<img src="/images/logos/bc-logo.png" width="300px" alt="Blueprint Coaching">
+								</a>
+							</li>
+						</ul>
+						<ul class="list-unstyled center-images companies">
+							<li class="text-center small-margin-top">
+								<a title="Martin Verdugos Beach Resort" href="http://digitalmediazone.ryerson.ca/">
+									<img src="/images/logos/mc-logo.png" width="300px" alt="Martin Verdugos Beach Resort">
+								</a>
+							</li>
+							<li class="text-center small-margin-top">
+								<a title="Bake Sale" href="http://www.bakesale.com/">
+									<img src="/images/logos/bs-logo.png" width="150px" alt="Bake Sale">
+								</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</section>
 		<section class="section section-short has-top">
 			<div class="background-media"></div>
 			<div class="background-overlay"></div>
