--- a/public/stylesheets/global.less
+++ b/public/stylesheets/global.less
@@ -584,6 +584,10 @@ a {
     .section-fill(@purple, @light-font);
   }
 
+  &.green {
+    .section-fill(@green, @light-font);
+  }
+
   &.grey {
     .section-fill(@secondary-bg, @steel-darkest);
   }
