--- a/views/home.ejs
+++ b/views/home.ejs
@@ -30,7 +30,7 @@
 		</div>
 	</section>
 	<article>
-		<section class="section section-companies purple has-top">
+		<section class="section section-companies green has-top">
 			<div class="background-media"></div>
 			<div class="background-overlay"></div>
 			<div class="container">
@@ -39,38 +39,105 @@
 				</header>
 				<div class="row">
 					<div class="col-md-12 text-center">
-						<ul class="list-unstyled center-images companies">
-							<li class="text-center small-margin-top">
+						<div class="companies">
+							<div class="company small-margin-top">
 								<a title="Roadmunk" href="https://www.roadmunk.com">
 									<img src="/images/logos/roadmunk-logo.png" width="300px" alt="Roadmunk">
 								</a>
-							</li>
-							<li class="text-center small-margin-top">
+							</div>
+							<div class="company small-margin-top">
 								<a title="Salesforce Work.com" href="http://www.work.com">
 									<img src="/images/logos/w-logo.png" width="300px" alt="Salesforce Work.com">
 								</a>
-							</li>
+							</div>
 							
-							<li class="text-center small-margin-top">
-								<a title="Blueprint Coaching" href="http://www.oce-ontario.org/">
+							<div class="company small-margin-top">
+								<a title="Blueprint Coaching" href="http://www.blueprintcoaching.ca">
 									<img src="/images/logos/bc-logo.png" width="300px" alt="Blueprint Coaching">
 								</a>
-							</li>
-						</ul>
-						<ul class="list-unstyled center-images companies">
-							<li class="text-center small-margin-top">
-								<a title="Martin Verdugos Beach Resort" href="http://digitalmediazone.ryerson.ca/">
+							</div>
+
+							<div class="company small-margin-top">
+								<a title="Martin Verdugos Beach Resort" href="http://www.verdugosbeachresort.com/">
 									<img src="/images/logos/mc-logo.png" width="300px" alt="Martin Verdugos Beach Resort">
 								</a>
-							</li>
-							<li class="text-center small-margin-top">
-								<a title="Bake Sale" href="http://www.bakesale.com/">
+							</div>
+
+							<div class="company small-margin-top">
+								<a title="Bake Sale" href="http://www.bakesaletoronto.com/">
 									<img src="/images/logos/bs-logo.png" width="150px" alt="Bake Sale">
 								</a>
-							</li>
-						</ul>
+							</div>
+						</div>
 					</div>
 				</div>
+			</div>
+		</section>
+		<section class="section section-normal purple has-top">
+			<div class="background-media"></div>
+			<div class="background-overlay"></div>
+			<div class="container">
+				<header class="section-header text-center underline">
+					<h1 class="headline text-large xsmall-margin-bottom hairline">Testimonials</h1>
+				</header>
+				<blockquote id="testimonial1" class="fancy-blockquote  transparent">
+					<div class="row small-margin-bottom">
+						<div class="col-md-2">
+							<div class="box-round box-huge">
+								<div class="box-dummy"></div>
+								<div class="box-inner">
+									<img src="/images/latif.png">
+								</div>
+							</div>
+						</div>
+						<div class="col-md-10">
+							<p>Brent is one of those rare students in a short period of 4 months that managed to absorb ideas and responsibilities and then contribute quickly to the product development and design. He took initiative on major projects, leading the entire implementation of the website and setup marketing analytics to track user acquisition and on boarding. Brent showed the entrepreneurial qualities needed to work in a startup making confident decisions, exchanging it difficult design conversations  and most importantly staying humble. We would gladly welcome back Brent to Roadmunk anytime.</p>
+							<small>Latif Nanji,</small>
+							<small>Co-Founder of Roadmunk</small>
+						</div>
+					</div>
+				</blockquote>
+				<blockquote id="testimonial2" class="fancy-blockquote transparent">
+					<div class="row small-margin-bottom">
+						<div class="col-md-10">
+							<p>Brent is absolutely wonderful to work with. He’s reliable, takes initiative and is incredibly social media savvy. By truly understanding and studying the specific brand or marketing campaign, he’s able to hone in on the target audience in order to maximize the potential of all social media platforms. Brent is responsive, forward thinking and always eager to find solutions.</p>
+							<small class="text-right">Sam Mednick,</small>
+							<small class="text-right">Founder of Blueprint Coaching</small>
+						</div>
+						<div class="col-md-2">
+							<div class="box-round box-huge">
+								<div class="box-dummy"></div>
+								<div class="box-inner">
+									<img src="/images/woman-1.png">
+								</div>
+							</div>
+						</div>
+					</div>
+				</blockquote>
+				<blockquote id="testimonial3" class="fancy-blockquote transparent">
+					<div class="row small-margin-bottom">
+						<div class="col-md-2">
+							<div class="box-round box-huge">
+								<div class="box-dummy"></div>
+								<div class="box-inner">
+									<img src="/images/man-2.png">
+								</div>
+							</div>
+						</div>
+						<div class="col-md-10">
+							<p>Brent was outstanding.  With a minimum of training he was quickly up and running. He consistently delivered outstanding work across several digital marketing disciplines:</p>
+								<ul class="small-margin-bottom">
+									<li>Writing: Managed the Work.com blog expertly and wrote several well received posts for the Salesforce blog.</li>
+									<li>Social Media: Brent ran the Work.com social media program on his own.  Under Brent's stewardship, the program is delivering great results.  He has good instincts for social media and creating compelling content.</li>
+									<li>Web Design: Brent showed great initiative and completely renovated the Work.com blog.  He sharpened the look, added more features for social sharing, and made the blog even more mobile accessible.</li>
+									<li>Graphic Art: Brent designed graphics and logos for various purposes on a regular basis.  Awesome work, especially on short notice.</li>
+									<li>Operations: Brent was always willing to to help with technical operations and he ensured that our backend reporting was tidy.</li>
+								</ul>
+							<small>David Austin,</small>
+							<small>Director of Online Marketing, Salesforce</small>
+						</div>
+					</div>
+				</blockquote>
 			</div>
 		</section>
 		<section class="section section-short has-top">
@@ -85,12 +152,12 @@
 						<div class="row">
 							<ul class="list-unstyled image-list">
 								<li class="col-md-4 small-margin-top">
-									<img src="/images/icon-clock-cogs.png" width="200" height="200" alt="Quickly Create Roadmap">
-									<!--<span class="init-clock">
+									<!--<img src="/images/icon-clock-cogs.png" width="200" height="200" alt="Quickly Create Roadmap">-->
+									<span class="init-clock">
 										<img src="/images/animations/icon-clock-cogs-no-hands2.png" width="200" height="200">
 										<img class="clock-hand" src="/images/animations/icon-clock-hand.png" height="3.5px">
 										<img class="hour-clock-hand" src="/images/animations/icon-hour-clock-hand.png" width="6px">
-									</span>-->
+									</span>
 									<div class="row">
 										<div class="col-md-10 center">
 											<h3 class="text-center font-normal text-get-smaller">Create your product roadmap in minutes</h3>
@@ -106,11 +173,11 @@
 									</div>
 								</li>
 								<li class="col-md-4 small-margin-top">
-									<img src="/images/icon-imac-roadmap.png" alt="Presentation ready roadmap" width="200" height="200">
-									<!--<span class="init-dl">
+									<!--<img src="/images/icon-imac-roadmap.png" alt="Presentation ready roadmap" width="200" height="200">-->
+									<span class="init-dl">
 										<img src="/images/icon-imac-roadmap.png" width="200" height="200">
 										<span class="glyphicon glyphicon-arrow-down download"></span>
-									</span>-->
+									</span>
 									<div class="row">
 										<div class="col-md-12 center">
 											<h3 class="text-center font-normal text-get-smaller">Download your presentation-ready roadmap</h3>
@@ -270,66 +337,6 @@
 						<p id="errorMessage" class="text-warning text-xsmall text-center xsmall-margin-top"></p>
 					</div>
 				</div>
-			</div>
-		</section>
-		<section class="section section-normal has-top">
-			<div class="background-media"></div>
-			<div class="background-overlay"></div>
-			<div class="container">
-				<header class="section-header text-center underline">
-					<h1 class="headline text-large xsmall-margin-bottom hairline">Testimonials</h1>
-				</header>
-				<blockquote id="testimonial1" class="fancy-blockquote  transparent">
-					<div class="row small-margin-bottom">
-						<div class="col-md-2">
-							<div class="box-round box-huge">
-								<div class="box-dummy"></div>
-								<div class="box-inner">
-									<img src="/images/man-1.png">
-								</div>
-							</div>
-						</div>
-						<div class="col-md-10">
-							<p>Nullam vitae sollicitudin eros. Cras varius vehicula velit, ac congue quam dictum sed. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat.Donec sed odio dui. Nulla vitae elit libero, a pharetra augue. Nullam id dolor id ultricies ut vehicula ut id. Integer posuere erat a venenatis dapibus posuere velit aliquet duis mollis. Pellentesque ornare sem lacinia quam venenatis vestibulum.</p>
-							<small>Latif Nanji,</small>
-							<small>Co-Founder of Roadmunk</small>
-						</div>
-					</div>
-				</blockquote>
-				<blockquote id="testimonial2" class="fancy-blockquote transparent">
-					<div class="row small-margin-bottom">
-						<div class="col-md-10">
-							<p>Nullam vitae sollicitudin eros. Cras varius vehicula velit, ac congue quam dictum sed. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat.Donec sed odio dui. Nulla vitae elit libero, a pharetra augue. Nullam id dolor id ultricies ut vehicula ut id. Integer posuere erat a venenatis dapibus posuere velit aliquet duis mollis. Pellentesque ornare sem lacinia quam venenatis vestibulum.</p>
-							<small class="text-right">Sam Mednick,</small>
-							<small class="text-right">Founder of Blueprint Coaching</small>
-						</div>
-						<div class="col-md-2">
-							<div class="box-round box-huge">
-								<div class="box-dummy"></div>
-								<div class="box-inner">
-									<img src="/images/woman-1.png">
-								</div>
-							</div>
-						</div>
-					</div>
-				</blockquote>
-				<blockquote id="testimonial3" class="fancy-blockquote transparent">
-					<div class="row small-margin-bottom">
-						<div class="col-md-2">
-							<div class="box-round box-huge">
-								<div class="box-dummy"></div>
-								<div class="box-inner">
-									<img src="/images/man-2.png">
-								</div>
-							</div>
-						</div>
-						<div class="col-md-10">
-							<p>Nullam vitae sollicitudin eros. Cras varius vehicula velit, ac congue quam dictum sed. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat.Donec sed odio dui. Nulla vitae elit libero, a pharetra augue. Nullam id dolor id ultricies ut vehicula ut id. Integer posuere erat a venenatis dapibus posuere velit aliquet duis mollis. Pellentesque ornare sem lacinia quam venenatis vestibulum.</p>
-							<small>David Austin,</small>
-							<small>Director of Online Marketing, Salesforce</small>
-						</div>
-					</div>
-				</blockquote>
 			</div>
 		</section>
 		<!--<section class="section section-short has-top">
