--- a/views/partials/scripts.ejs
+++ b/views/partials/scripts.ejs
@@ -21,6 +21,7 @@
 
 <% } else if (content == "home") { %>
 
+	<script src='/vendor/slick.js/slick/slick.min.js'></script>
 	<script src="/javascripts/home.js"></script>
 
 <% } else if (content == "pricing") { %>
