--- a/views/partials/stylesheets.ejs
+++ b/views/partials/stylesheets.ejs
@@ -1,5 +1,6 @@
 <!-- Stylesheets -->
 <link rel='stylesheet' href='/vendor/bootstrap/dist/css/bootstrap.min.css' />
+<link rel='stylesheet' href='/vendor/slick.js/slick/slick.css' />
 <link rel='stylesheet' href='/stylesheets/fonts.css' />
 <link rel='stylesheet' href='/stylesheets/animate.css' />
 <link rel='stylesheet' href='/stylesheets/style.css' />
