--- a/public/stylesheets/home.less
+++ b/public/stylesheets/home.less
@@ -1,7 +1,7 @@
 .home {
 
   // Animations Latif currently does not want
-  /*.init-clock {
+  .init-clock {
     position: relative;
     &:hover {
       .clock-hand {
@@ -39,7 +39,7 @@
     font-size: 60px;
     opacity: 0.8;
     color: @green;
-  }*/
+  }
 
   input.subscribe {
     width: 65%;
@@ -49,15 +49,25 @@
 
   .home-svg {
     margin-top: 35px;
-    /*&:hover {
+    &:hover {
       .animation(2s rotate infinite linear);
-    }*/
+    }
   }
 
   .companies {
     .flex-display();
     .flex-wrap(wrap);
     .justify-content(space-around);
+  }
+
+  .slick-track {
+    .flex-display();
+    .align-items(center);
+  }
+
+  .company {
+    .flex-display();
+    .justify-content(center);
   }
 
   .landing-text {
@@ -173,6 +183,7 @@
 
     small {
       font-size      : 12px;
+      color          : @light-grey;
       text-transform : uppercase;
       &:before {
         content: ""
