--- a/views/home.ejs
+++ b/views/home.ejs
@@ -30,6 +30,54 @@
 		</div>
 	</section>
 	<article>
+		<section class="section section-companies red has-top">
+			<div class="background-media"></div>
+			<div class="background-overlay"></div>
+			<div class="container skill">
+				<header class="section-header small text-center underline">
+					<h1 class="headline text-large hairline xsmall-margin-bottom">Skills</h1>
+				</header>
+				<div class="row large-margin-top">
+					<div class="col-md-10 center">
+						<div id="feature_1_text" class="col-md-5">
+							<header class="small-header features-text-left">
+								<h1 class="headline text-small hairline">Design</h1>
+								<p class="body-subheader features">Create stunning visualizations by applying designer or newly created palettes to your roadmap, providing the deepest impact to your audience.</p>
+							</header>
+						</div>
+						<div id="feature_1_img" class="col-md-6 features-right features-text-right">
+							<img src="/images/color-palette.png" itemprop="screenshot" alt="Software for creating roadmaps with designer palettes">
+						</div>
+					</div>
+				</div>
+				<div class="row large-margin-top">
+					<div class="col-md-10 center">
+						<div id="feature_2_text" class="col-md-5 features-right">
+							<header class="small-header features-text-left">
+								<h1 class="headline text-small hairline">Development</h1>
+								<p class="body-subheader features">There is no need to move pixels on slides with our direct export to presentation formats. Select your aspect ratio (4:3, 16:9, 16:10) and download your roadmap in a presentation-ready format (PPT, PNG, PDF, HTML).</p>
+							</header>
+						</div>
+						<div id="feature_2_img" class="col-md-6 features-text-left">
+							<img src="/images/fit-to-powerpoint.png" itemprop="screenshot" alt="Presentation ready roadmaps with our roadmapping software">
+						</div>
+					</div>
+				</div>
+				<div class="row large-margin-top">
+					<div class="col-md-10 center">
+						<div id="feature_3_text" class="col-md-5">
+							<header class="small-header features-text-left">
+								<h1 class="headline text-small hairline">Marketing</h1>
+								<p class="body-subheader features">Your audience can view the latest roadmap status and details by interacting with an HTML version of the roadmap, published as a private URL.</p>
+							</header>
+						</div>
+						<div id="feature_3_img" class="col-md-6 features-right features-text-right">
+							<img src="/images/publish-to-url.png" itemprop="screenshot" alt="Share product roadmaps with audience">
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
 		<section class="section section-companies green has-top">
 			<div class="background-media"></div>
 			<div class="background-overlay"></div>
@@ -108,7 +156,7 @@
 							<div class="box-round box-huge">
 								<div class="box-dummy"></div>
 								<div class="box-inner">
-									<img src="/images/woman-1.png">
+									<img src="/images/sam.png">
 								</div>
 							</div>
 						</div>
@@ -120,7 +168,7 @@
 							<div class="box-round box-huge">
 								<div class="box-dummy"></div>
 								<div class="box-inner">
-									<img src="/images/man-2.png">
+									<img src="/images/dave.png">
 								</div>
 							</div>
 						</div>
@@ -140,7 +188,7 @@
 				</blockquote>
 			</div>
 		</section>
-		<section class="section section-short has-top">
+		<!--<section class="section section-short has-top">
 			<div class="background-media"></div>
 			<div class="background-overlay"></div>
 			<div class="container">
@@ -151,9 +199,9 @@
 					<div class="col-md-12 text-default">
 						<div class="row">
 							<ul class="list-unstyled image-list">
-								<li class="col-md-4 small-margin-top">
+								<li class="col-md-4 small-margin-top">-->
 									<!--<img src="/images/icon-clock-cogs.png" width="200" height="200" alt="Quickly Create Roadmap">-->
-									<span class="init-clock">
+									<!--<span class="init-clock">
 										<img src="/images/animations/icon-clock-cogs-no-hands2.png" width="200" height="200">
 										<img class="clock-hand" src="/images/animations/icon-clock-hand.png" height="3.5px">
 										<img class="hour-clock-hand" src="/images/animations/icon-hour-clock-hand.png" width="6px">
@@ -172,9 +220,9 @@
 										</div>
 									</div>
 								</li>
-								<li class="col-md-4 small-margin-top">
+								<li class="col-md-4 small-margin-top">-->
 									<!--<img src="/images/icon-imac-roadmap.png" alt="Presentation ready roadmap" width="200" height="200">-->
-									<span class="init-dl">
+									<!--<span class="init-dl">
 										<img src="/images/icon-imac-roadmap.png" width="200" height="200">
 										<span class="glyphicon glyphicon-arrow-down download"></span>
 									</span>
@@ -209,9 +257,7 @@
 						<div class="row">
 							<div class="col-md-8">
 								<div class="browser">
-									<!--<img class="bg" src="/images/browser.jpg">-->
 									<img class="bg" src="/images/browser-roadmunk.jpg">
-									<!--<p class="url">https://app.roadmunk.com</p>-->
 									<img id="sprintImg" class="screen selected-img" src="/images/sprint-roadmap.png" itemprop="screenshot" alt="Sprint Product Roadmap">
 									<img id="projectImg" class="screen" src="/images/project-roadmap.png" alt="Project Roadmap for Product Managers">
 									<img id="releaseImg" class="screen" src="/images/release-roadmap.png" alt="Release Roadmap">
@@ -278,7 +324,6 @@
 						<div class="row">
 							<ul class="list-unstyled row image-list">
 								<li class="col-md-3 small-margin-top">
-								<!-- a that goes to feature -->
 									<img src="/images/binder.svg" width="225" height="225" alt="Slick Tools to help create perfect product roadmap">
 									<h3 class="text-center font-normal">Idea Management</h3>
 									<div class="col-sm-10 center">
@@ -318,8 +363,8 @@
 				</div>
 				</div>
 			</div>
-		</section>
-		<section class="section section-normal has-top">
+		</section>-->
+		<section class="section section-normal yellow has-top">
 			<div class="background-media"></div>
 			<div class="background-overlay"></div>
 			<div class="container">
@@ -329,9 +374,9 @@
 				</header>
 				<div class="row">
 					<div class="col-sm-6 center">
-						<form id="subscribe" action='/lists/57a5de6df8/subscribe/' method='post'>
+						<form id="subscribe" action='/lists/b966edb789/subscribe/' method='post'>
 							  <input id="email" name="email" type="email" class="form-control input-lg subscribe text-center" placeholder="Enter email address" required>
-							  <button type="submit" class="cta subscribe center"></button>
+							  <button type="submit" class="cta2 yellow subscribe"></button>
 						</form>
 						<p id="successMessage" class="text-success text-xsmall text-center xsmall-margin-top"></p>
 						<p id="errorMessage" class="text-warning text-xsmall text-center xsmall-margin-top"></p>
